--- a/proyectoPepsico/pages/vehiculos_agendados/css/vehiculos_agendados.css
+++ b/proyectoPepsico/pages/vehiculos_agendados/css/vehiculos_agendados.css
@@ -147,3 +147,20 @@
     }
 }
 
+/* Espacio para separar el contenido del footer */
+.pc-content {
+    padding-bottom: 6rem !important;
+}
+
+@media (max-width: 768px) {
+    .pc-content {
+        padding-bottom: 5rem !important;
+    }
+}
+
+@media (max-width: 480px) {
+    .pc-content {
+        padding-bottom: 4rem !important;
+    }
+}
+
