--- a/proyectoPepsico/pages/mis_solicitudes/css/mis_solicitudes.css
+++ b/proyectoPepsico/pages/mis_solicitudes/css/mis_solicitudes.css
@@ -299,3 +299,20 @@
     background-color: #5a6268;
 }
 
+/* Espacio para separar el contenido del footer */
+.pc-content {
+    padding-bottom: 6rem !important;
+}
+
+@media (max-width: 768px) {
+    .pc-content {
+        padding-bottom: 5rem !important;
+    }
+}
+
+@media (max-width: 480px) {
+    .pc-content {
+        padding-bottom: 4rem !important;
+    }
+}
+
