--- a/proyectoPepsico/pages/gestion_usuarios/css/gestion_usuarios.css
+++ b/proyectoPepsico/pages/gestion_usuarios/css/gestion_usuarios.css
@@ -51,6 +51,36 @@
     .table-responsive {
         font-size: 0.8rem;
     }
+    
+    .dataTables_wrapper .dataTables_length,
+    .dataTables_wrapper .dataTables_filter {
+        float: none;
+        text-align: left;
+        margin-bottom: 0.75rem;
+    }
+    
+    .dataTables_wrapper .dataTables_filter input {
+        width: 100%;
+        margin-left: 0;
+        margin-top: 0.5rem;
+    }
+    
+    .form-row .col-md-6 {
+        margin-bottom: 1rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .dataTables_wrapper .dataTables_length,
+    .dataTables_wrapper .dataTables_filter,
+    .dataTables_wrapper .dataTables_info {
+        text-align: center;
+    }
+    
+    .dataTables_wrapper .dataTables_paginate {
+        text-align: center;
+        margin-top: 1rem;
+    }
 }
 
 /* Estilos para DataTables */
